--- a/sobre.html
+++ b/sobre.html
@@ -10,6 +10,16 @@
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <style>
+            /* Adicione estilos personalizados para dispositivos móveis aqui, se necessário */
+            @media (max-width: 768px) {
+                /* Exemplo: */
+                .sidebar-heading {
+                    font-size: 1.2rem;
+                }
+                /* Adicione outros estilos conforme necessário */
+            }
+            </style>
     </head>
     <body>
         <div class="d-flex" id="wrapper">
@@ -30,7 +40,7 @@
                 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
                     <div class="container-fluid">
                         <button class="btn btn-primary" id="sidebarToggle">Menu</button>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                        
                     </div>
                 </nav>
                 <!-- Page content-->
