--- a/venda.html
+++ b/venda.html
@@ -142,6 +142,10 @@
                     </div>
                 </div>
             </div>
+
+            <div id="product-list" class="row"></div>
+
+            <div id="api-data"></div>
         </div>
     </div>
       </div>
