--- a/revenda.html
+++ b/revenda.html
@@ -142,6 +142,7 @@
               </div>
             </div>
 
+
             <div class="col-md-6 col-lg-4">
               <div class="product-card">
                 <img src="https://media.pichau.com.br/media/catalog/product/cache/2f958555330323e505eba7ce930bdf27/c/a/ca-9011237-na3.jpg" class="card-img-top" alt="headset">
@@ -153,6 +154,8 @@
                 </div>
               </div>
             </div>
+
+            <div id="api-data-revenda" class="row"></div>
           </div>
         </div>
       </div>
@@ -162,6 +165,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
   <script src="js/scripts.js"></script>
+  <script src="js/revenda.js"></script> 
   <script>
     let newWorker;
     if ('serviceWorker' in navigator) {
