--- a/venda.html
+++ b/venda.html
@@ -138,14 +138,12 @@
                     <p class="text-break">Estou vendendo porque preciso do dinheiro, engravidei minha mulher.</p>
                     <div class="card-footer d-flex align-items-center justify-content-between">
                         <small class="text-white">Preço: R$ 24.000,00</small>
-                        <button class="btn btn-success btn-sm">Comprar</button>
+                        <button class="btn btn-success btn-sm" onclick="redirecionar_carrinho()">Comprar</button>
                     </div>
                 </div>
             </div>
 
-            <div id="product-list" class="row"></div>
-
-            <div id="api-data"></div>
+            <div id="api-data-venda" class="row"></div>
         </div>
     </div>
       </div>
@@ -155,6 +153,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
   <script src="js/scripts.js"></script>
+  <script src="js/venda.js"></script>
   <script>
     let newWorker;
     if ('serviceWorker' in navigator) {
