--- a/revenda.html
+++ b/revenda.html
@@ -70,102 +70,21 @@
       <!-- Page content-->
       <div class="container-fluid">
         <h1 class="mt-4">OLX do paraguai</h1>
-        <p>Pagina de produtos para <strong>vender</strong>.</p>
+        <p>Pagina de produtos em <strong>Revenda</strong>.</p>
 
       </div>
 
-        <div class="container-fluid flex-nowrap mb-3 me-5">
-          <div class="row">
-
-
-            <div class="col-md-6 col-lg-4">
-              <div class="product-card">
-                <img class="bg-white" src="https://i5.walmartimages.com/seo/Lenovo-Tab-M10-Plus-3rd-Gen-10-Tablet-64GB-Storage-4GB-Memory-Android-12-FHD-Display_6d20d86e-e339-4dea-a97d-788dbf71f08c.50da7e377a5410315db7b2430fc13a86.png" class="card-img-top" alt="Tablet">
-                <h5 class="mt-3 text-capitalize">Tablet Samsung</h5>
-                <p class="text-break">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                <div class="card-footer d-flex align-items-center justify-content-between">
-                  <small class="text-body-secondary">R$:3.800,00</small>
-                  <button class="btn btn-success ">Comprar</button>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="product-card">
-                <img src="https://imgs.extra.com.br/55054349/1g.jpg" class="card-img-top" alt="Note gamer">
-                <h5 class="mt-3 text-capitalize">Laptop gamer ACER</h5>
-                <p class="text-break">Laptop gamer acer novo modelo anunciado.</p>
-                <div class="card-footer d-flex align-items-center justify-content-between">
-                  <small class="text-white">R$:5.500,00</small>
-                  <button class="btn btn-success ">Comprar</button>
-                </div>
-              </div>
-            </div>
-
-
-            <div class="col-md-6 col-lg-4">
-              <div class="product-card">
-                <img src="https://i.dell.com/is/image/DellContent//content/dam/ss2/product-images/dell-client-products/peripherals/monitors/alienware/aw3423dw/monitor-alienware-aw3423dw-pdp-hero.psd?qlt=95&fit=constrain,1&hei=3470&wid=5000&fmt=jpg" class="card-img-top" alt="Monitor gamer">
-                <h5 class="mt-3 text-capitalize">Monitor Alienware</h5>
-                <p class="text-break">Monitor Alienware Com a tecnologia AMD FreeSync, você elimina qualquer corte ou travamento por meio da sincronização do GPU e do monitor. Experiência impecável com 144Hz Tempo de resposta ultrarrápido de 1ms. Base Ajustável: oferece um controle preciso da altura e ângulo de visão Dial Point: mira vermelha que fica posicionada no centro da tela.</p>
-                <div class="card-footer d-flex align-items-center justify-content-between">
-                  <small class="text-body-secondary">R$:1.750,00</small>
-                  <button class="btn btn-success ">Comprar</button>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-6 col-lg-4">
-              <div class="product-card">
-                <img class="bg-white" src="https://resource.logitech.com/content/dam/logitech/en/products/combos/mk540-mouse-keyboard-combo/gallery/mk540-br-gallery1.png" class="card-img-top" alt="mouse e teclado">
-                <h5 class="mt-3 text-capitalize">Mouse + Teclado logitech</h5>
-                <p class="text-break">Baterias de longa duração
-                  Teclas antidesbotamento e resistentes a derramamentos
-                  Acesso rápido, teclas multimídia e um conveniente teclado numérico
-                  Sensibilidade do mouse de 1000 DPI
-                  Pernas inclináveis para posições de digitação ajustáveis.</p>
-                <div class="card-footer d-flex align-items-center justify-content-between">
-                  <p class="text-white">Preço: R$:450,00</p>
-                  <button class="btn btn-success btn-sm">Comprar</button>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-6 col-lg-4">
-              <div class="product-card">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyYsBfdLtDfii7Q1YxucIhlAb2V-JhDCoyGg&usqp=CAU" class="card-img-top" alt="iphone imagem">
-                <h5 class="mt-3 text-capitalize">Iphone 13x Max</h5>
-                <p class="text-break">Novo iphone 13 max esta disponivel para venda nesse site novinho.</p>
-                <div class="card-footer d-flex align-items-center justify-content-between">
-                  <p class="text-white">Preço: R$:8.500,00</p>
-                  <button class="btn btn-success btn-sm">Comprar</button>
-                </div>
-              </div>
-            </div>
-
-
-            <div class="col-md-6 col-lg-4">
-              <div class="product-card">
-                <img src="https://media.pichau.com.br/media/catalog/product/cache/2f958555330323e505eba7ce930bdf27/c/a/ca-9011237-na3.jpg" class="card-img-top" alt="headset">
-                <h5 class="mt-3 text-capitalize">Headset CORSAIR</h5>
-                <p class="text-break">Horas jogando confortavelmente: Auriculares ajustáveis de viscoelástico revestidos em couro artificial e um arco ajustável compõem uma estrutura leve que pesa apenas 273g e proporciona conforto durante horas de jogo. Áudio excelente para jogos: Drivers de áudio em neodímio de 50mm com ajuste personalizado e de alta qualidade oferecem a capacidade para escutar tudo no campo de batalha, além do suporte para Tempest 3D AudioTech no PS5. Dolby Audio 7.1 com som surround no PC e no Mac: O adaptador USB incluído permite ter uma experiência de áudio multicanal, mergulhando você dentro da ação do jogo. Microfone omnidirecional: Capta, com precisão, todas as suas chamadas e comandos, além de contar com uma prática função articulada para silenciar. Compatibilidade com várias plataformas: Jogue no PC, Mac, PS5/PS4, Xbox Series X | S, Nintendo Switch e dispositivos móveis por meio de um conector de 3,5mm..</p>
-                <div class="card-footer d-flex align-items-center justify-content-between">
-                  <small class="text-body-secondary">R$:840,00</small>
-                  <button class="btn btn-success ">Comprar</button>
-                </div>
-              </div>
-            </div>
-
-            <div id="api-data-revenda" class="row"></div>
-          </div>
+        <div class="container-fluid flex-nowrap mb-3 me-5 row">
+            <div id="produtos" class="row"></div>
         </div>
       </div>
-    </div>
-  </div>
+      </div>
+
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
   <script src="js/scripts.js"></script>
-  <script src="js/revenda.js"></script> 
+  <script src="js/revenda.js"></script>
   <script>
     let newWorker;
     if ('serviceWorker' in navigator) {
