--- a/venda.html
+++ b/venda.html
@@ -74,86 +74,18 @@
 
       </div>
 
-      <div class="container-fluid flex-nowrap mb-3 me-5">
-        <div class="row">
-            <div class="col-md-6 col-lg-4">
-                <div class="product-card">
-                    <img src="https://samsungbrshop.vtexassets.com/arquivos/ids/205579/SM-A346_Galaxy-A34-5G_Awesome-Graphite_Front2_.jpg" class="card-img-top" alt="samsung a70">
-                    <h5 class="mt-3 text-capitalize">Samsung A70</h5>
-                    <p class="text-break">Samsung A70 quase novo, pouco usado, 4 meses de uso.</p>
-                    <div class="card-footer d-flex align-items-center justify-content-between">
-                        <small class="text-white">Preço: R$ 1.200,00</small>
-                        <button class="btn btn-success btn-sm">Comprar</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-                <div class="product-card">
-                    <img src="https://d30u9wim1barf6.cloudfront.net/Custom/Content/Products/98/67/986751_notebook-gamer-asus-15-6-rog-strix-g531gt-i7-9750h-2-6ghz-512gb-16gb-gtx-1650-4gb-win10-home-pretonac006322_z1_637082947809490227.jpg" class="card-img-top" alt="Note gamer usado">
-                    <h5 class="mt-3 text-capitalize">Laptop Gamer Usado</h5>
-                    <p class="text-break">Laptop gamer usado, não curti o estilo, estou à procura de outro e pretendo me livrar desse.</p>
-                    <div class="card-footer d-flex align-items-center justify-content-between">
-                        <small class="text-white">Preço: R$ 2.300,00</small>
-                        <button class="btn btn-success btn-sm">Comprar</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-                <div class="product-card">
-                    <img class="bg-white" src="https://i5.walmartimages.com/seo/Lenovo-Tab-M10-Plus-3rd-Gen-10-Tablet-64GB-Storage-4GB-Memory-Android-12-FHD-Display_6d20d86e-e339-4dea-a97d-788dbf71f08c.50da7e377a5410315db7b2430fc13a86.png" class="card-img-top" alt="Tablet">
-                    <h5 class="mt-3 text-capitalize">Tablet Samsung</h5>
-                    <p class="text-break">Estou vendendo porque não uso mais.</p>
-                    <div class="card-footer d-flex align-items-center justify-content-between">
-                        <small class="text-white">Preço: R$ 1.100,00</small>
-                        <button class="btn btn-success btn-sm">Comprar</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-                <div class="product-card">
-                    <img src="https://m.media-amazon.com/images/I/71mConWh9BL.jpg" class="card-img-top" alt="Monitor gamer">
-                    <h5 class="mt-3 text-capitalize">USB</h5>
-                    <p class="text-break">USB recentemente formatado, 8GB de espaço.</p>
-                    <div class="card-footer d-flex align-items-center justify-content-between">
-                        <small class="text-white">Preço: R$ 25,00</small>
-                        <button class="btn btn-success btn-sm">Comprar</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-                <div class="product-card">
-                    <img src="https://m.media-amazon.com/images/I/61sc+A9KapL._AC_UF1000,1000_QL80_.jpg" class="card-img-top" alt="mouse e teclado">
-                    <h5 class="mt-3 text-capitalize">XBOX Series S</h5>
-                    <p class="text-break">Estou vendendo porque meu namorado me traiu!!!</p>
-                    <div class="card-footer d-flex align-items-center justify-content-between">
-                        <small class="text-white"><s>R$ 1.500,00</s> R$ 450,00</small>
-                        <button class="btn btn-success btn-sm">Comprar</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-                <div class="product-card">
-                    <img src="https://lh3.googleusercontent.com/proxy/j9sq4SQd20QqcrIXyrxtqYZRo6LTwjNiM9sc7Jgu7omM2V-XkGtd47_IVqLyeb7At9a5eKv-7RytM2-NajWUoiWdlCwLyUSVkk5bk6I7XBteKByGGz9MitPUD3J_N5zs5t3axD2kJvXedQNn3EDSDMljZNG5VvBiYkM" class="card-img-top" alt="headset">
-                    <h5 class="mt-3 text-capitalize">K8000R | GWS</h5>
-                    <p class="text-break">Estou vendendo porque preciso do dinheiro, engravidei minha mulher.</p>
-                    <div class="card-footer d-flex align-items-center justify-content-between">
-                        <small class="text-white">Preço: R$ 24.000,00</small>
-                        <button class="btn btn-success btn-sm" onclick="redirecionar_carrinho()">Comprar</button>
-                    </div>
-                </div>
-            </div>
 
-            <div id="api-data-venda" class="row"></div>
+          <div class="container-fluid flex-nowrap mb-3 me-5 row">
+            <div id="produtos" class="row"></div>
         </div>
-    </div>
-      </div>
-    </div>
-  </div>
+          </div>
+        </div>
+
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
   <script src="js/scripts.js"></script>
-  <script src="js/venda.js"></script>
+  <script src="js/venda.js"></script> 
   <script>
     let newWorker;
     if ('serviceWorker' in navigator) {
